<resources>
    <string name="app_name">Triskl</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="free_on_spotify">Free on Spotify.</string>
    <string name="millions_of_songs">Millions of songs.</string>
    <string name="spotify_logo">Spotify logo</string>
    <string name="background_image_shadow_of_someone_listening_music">Background image, shadow of someone listening music</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="your_library">Your Library</string>
    <string name="your_top_artists_last_6_months">Your top artists (last 6 months)</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="artist_picture">Artist picture</string>
    <string name="preference_file_key">com.bustasirio.triskl.PREFERENCE_FILE_KEY</string>
    <string name="spotify_access_token">SpotifyAccessToken</string>
    <string name="spotify_token_type">SpotifyTokenType</string>
    <string name="spotify_refresh_token">SpotifyRefreshToken</string>
    <string name="spotify_country_pos">SpotifyCountryPos</string>
    <string name="spotify_country">SpotifyCountry</string>
    <string name="spotify_language">SpotifyLanguage</string>
    <string name="spotify_logged">SpotifyLogged</string>
    <string name="most_played_songs">Most played songs</string>
    <string name="current_user_profile_image">Current user profile image</string>
    <string name="search_image_button">Search image button</string>
    <string name="add_image_button">Add image button</string>
    <string name="tracks_url">com.bustasirio.triskl.tracks_url</string>
    <string name="owner_boolean">com.bustasirio.triskl.owner_boolean</string>
    <string name="no_playlists">com.bustasirio.triskl.no_playlists</string>
    <string name="user_object">com.bustasirio.triskl.user_object</string>
    <string name="playlist_cover_image">Playlist cover image</string>
    <string name="album_cover_image">Album cover image</string>
    <string name="random_play_button">Random play button</string>
    <string name="back_to_library_button">Back to library button</string>
    <string name="settings_button">Go to settings button</string>
    <string name="profile">Profile</string>
    <string name="last_month">Last month</string>
    <string name="last_6_months">Last 6 months</string>
    <string name="lifetime">Lifetime</string>
    <string name="_10_songs">10 songs</string>
    <string name="_20_songs">20 songs</string>
    <string name="_50_songs">50 songs</string>
    <string name="create_title">Create top tracks playlist</string>
    <string name="time_range">Time range</string>
    <string name="size">Size</string>
    <string name="reload_library">reload_library</string>
    <string name="create_fragment">CreateFragment</string>
    <string name="saved_shows">Saved Shows</string>
    <string name="your_episodes">Your Episodes</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="arg_saved_type">com.bustasirio.triskl.saved_type</string>
    <string name="arg_bottom_sheet_track">com.bustasirio.triskl.bottom_sheet_track</string>
    <string name="arg_bottom_sheet_episode">com.bustasirio.triskl.bottom_sheet_episode</string>
    <string name="category_image">Category image</string>
    <string name="category_playlists">category_playlists</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="country_details_settings">Worldwide queries will be relevant to all countries</string>
    <string name="country_settings">Select country</string>
    <string name="worldwide">Worldwide</string>
    <string name="language_details_settings">Queries language</string>
    <string name="language_settings">Select language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="recently_played_tracks_button">Recently played tracks button</string>
    <string name="liked_songs_image">Liked songs image with a heart icon</string>
    <string name="your_episodes_image">Your episodes image</string>
    <string name="beta">BETA</string>
    <string name="saved_shows_image">Saved shows image with a microphone icon</string>
    <string name="reproduce_toast">This track cannot be reproduced.</string>
    <string name="decoration_main">Decoration, try with log in button</string>
    <string name="album_boolean">album_boolean</string>
    <string name="arg_album_from_bottom">com.bustasirio.triskl.album_from_bottom</string>
    <string name="save">Save</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="change_image">Change image</string>
    <string name="add_description">Add description</string>
    <string name="play_on_spotify_edit">Play on Spotify</string>
    <string name="share_edit">Share</string>
    <string name="add_to_queue_edit">Add to Queue</string>
    <string name="reproduce_sample_edit">Reproduce Sample</string>
    <string name="description_edit">Give your playlist a catchy description</string>
    <string name="name_edit">Playlist name</string>
    <string name="arg_playlist_to_edit">com.bustasirio.triskl.playlist_to_edit</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="queue_403">Feature available with Spotify Premium</string>
    <string name="get_premium">Spotify Premium lets you play any track, ad-free and with better audio quality. Go to spotify.com/premium to try it for free.</string>
    <string name="device_no_found">No active device found</string>
    <string name="no_data_create">No data available to fill the playlist</string>
    <string name="recently_played">Recently played</string>
    <string name="categories">Categories</string>
    <string name="create_text">* The playlist will have a default name based on the params you selected, you can change details later.</string>
    <string name="create">Create</string>
    <string name="followers_caps">FOLLOWERS</string>
    <string name="get_spotify_free">Get Spotify Free</string>
    <string name="spotify_package">com.spotify.music</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="internet_problem">No internet connection</string>
    <string name="edit_saved">Saved!</string>
    <string name="network_problem">Network failure</string>
    <string name="conversion_problem">Conversion error</string>
    <string name="playlist_created">Playlist Created</string>
    <string name="not_working">Not working yet :(</string>
    <string name="spotify_icon">Spotify icon</string>
    <string name="authorization">Authorization</string>
    <string name="dialog_desc">To continue using this app you must have permission from the developer, this is due to Spotify\'s limitations. Get in contact to be added to the whitelist.</string>
    <string name="dialog_button">Understood</string>
    <string name="spotify_first_time">spotify_first_time</string>
    <string name="told_you">"403: Told you. User not registered in the Developer Dashboard"</string>
    <string name="too_many_requests">429: Too many requests. Try again later.</string>
    <string name="internal_server_error">500: Spotify\'s internal server error. Try again later.</string>
    <string name="service_unavailable">503: Service unavailable. Try again later.</string>
    <string name="not_found">404: Not found. Try again later.</string>
    <string name="try_later">. Try again later.</string>
    <string name="triskl_logo">Triskl logo</string>
    <string name="all_content_provided_by">All content provided by</string>
    <string name="gradient">Gradient</string>
    <string name="has_not_changed">No detail has changed</string>
    <string name="created_description">Generated on</string>
    <string name="search_box">Artists, songs, or podcasts</string>
    <string name="search_query">Search query</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="episodes">Episodes</string>
    <string name="podcasts_and_shows">Podcasts &amp; shows</string>
    <string name="search_result_1">Play what you love</string>
    <string name="search_result_2">Search for artists, songs, podcasts, and more.</string>
    <string name="search_result_incorrect_1">Couldn\'t find </string>
    <string name="search_result_incorrect_2">Try searching again using a different spelling or keyword.</string>
    <string name="podcast_cover_image">Podcast cover image</string>
    <string name="episode_cover_image">Episode cover image</string>
</resources>