<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spotifyBlack"
    tools:context=".ui.view.activities.MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundLoginImage"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:contentDescription="@string/background_image_shadow_of_someone_listening_music"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_login"
            android:contentDescription="@string/gradient" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvContentMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_content_provided_by"
        android:textColor="@color/spotifyGreen"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spotifyLogoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/spotifyLogoMain"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:contentDescription="@string/background_image_shadow_of_someone_listening_music"
        android:padding="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/spotify_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingStart="40dp"
        android:paddingEnd="56dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/spotifyBlack"
        android:textSize="18sp"
        android:theme="@style/SignUpGreenButton"
        app:layout_constraintBottom_toTopOf="@+id/tvContentMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLoginText" />

    <TextView
        android:id="@+id/secondLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/free_on_spotify"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/millions_of_songs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/secondLoginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/spotifyLoginImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/spotify_logo"
        android:src="@drawable/icon_white"
        app:layout_constraintBottom_toTopOf="@+id/firstLoginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>