<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spotifyBlack"
    tools:context=".ui.view.fragments.LibraryFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLibrary"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:background="@color/spotifyBlack"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProfileLibrary"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/current_user_profile_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/no_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/your_library"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfileLibrary"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibHistoryLibrary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/trans"
            android:backgroundTint="@color/trans"
            android:contentDescription="Recently played tracks button"
            android:elevation="0dp"
            android:outlineAmbientShadowColor="@color/trans"
            android:outlineSpotShadowColor="@color/trans"
            android:src="@drawable/ic_baseline_history_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibCreateLibrary"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/ibCreateLibrary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/trans"
            android:backgroundTint="@color/trans"
            android:contentDescription="@string/add_image_button"
            android:elevation="0dp"
            android:outlineAmbientShadowColor="@color/trans"
            android:outlineSpotShadowColor="@color/trans"
            android:src="@drawable/ic_baseline_add_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gradient_library"
        android:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clLibrary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylistsLibrary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="84dp"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:itemCount="20"
        tools:listitem="@layout/your_library_item" />

    <ProgressBar
        android:id="@+id/progressLibrary"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="invisible"
        android:progress="0"
        android:max="500"
        android:indeterminateDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>